--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/preset-classic": "3.7.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.5.0",
     "my-website": "file:",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
